# Takeout-Organizer

./: .gitattributes  .gitignore  LICENSE  README.md  dedup.py  pyproject.toml  verify.py
.github/workflows/: ci.yml
takeout_lib/: __init__.py  cliutil.py  config.py  dates.py  exif.py  filetypes.py  inventory.py  livephoto.py  matching.py  neardup.py  neardup_prep.py  neardup_review.py  parallelism.py  pipeline.py  sidecars.py  verifier.py
tests/: conftest.py  test_dates.py  test_filetypes.py  test_livephoto.py  test_matching.py  test_neardup.py  test_parallel.py  test_pipeline.py
tools/: find_near_dupes.py  fix_extensions.py  refolder_unknown.py
