[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "takeout-organizer"
version = "0.1.0"
description = "Deduplicate a Google Photos Takeout and attach its metadata, ready to upload elsewhere."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Avi Hirsch" }]
keywords = ["google-photos", "takeout", "deduplication", "exif", "metadata", "photos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/avihirschx/Takeout-Organizer"
Repository = "https://github.com/avihirschx/Takeout-Organizer"
Issues = "https://github.com/avihirschx/Takeout-Organizer/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]
# Only the near-duplicate tool needs these; the core pipeline stays dependency-free.
neardup = ["Pillow>=9.1", "pillow-heif>=0.13"]

[tool.setuptools]
packages = ["takeout_lib"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
